Fixed background to be responsive on mobile as well as different sized screens

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,22 @@
+@media only screen and (max-width: 620px){
+    #body{
+        background-image: url('/cube/background-mobile.jpg') !important;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+
+
+#body{
+    background-image: url('/cube/background.jpg');
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+}
+
+
 .text-labs{
     color: #8fe10f;
 }
@@ -34,6 +53,7 @@
     background-color: #8fde19;
     border-color: #72b605;
 }
+
 
 .btn-delete{
     transition: 200ms;
